@@ -1,3 +1,8 @@
+2005-06-03  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/21336
+	* g++.dg/template/new2.C: New test.
+
 2005-05-29  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/c99-math.h: New
